Fixed link to repository

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 		<!-- Footer :3 -->
 		<footer class="mb-3">
 			<div class="container text-center">
-				Made with <span class="entypo heart text-danger"></span> by <a target="_blank" href="https://github.com/volbil/blockchain-explorer">Volbil</a>
+				Made with <span class="entypo heart text-danger"></span> by <a target="_blank" href="https://github.com/volbil/web-wallet">Volbil</a>
 			</div>
 		</footer>
 
