--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://volbil.github.io/business-tycoon/business-tycoon.min.css">
+		<link rel="stylesheet" href="https://volbil.github.io/entypo/entypo.css">
 		<link href="https://microbitcoinorg.github.io/misc/favicon.ico" rel="icon" type="image/x-icon">
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -126,7 +128,6 @@
 		</script>
 
 		<style>
-			@import url(https://volbil.github.io/entypo/entypo.css);
 			html {
 				height: 100%;
 			}
@@ -248,7 +249,7 @@
 									<input id="open-password" name="open-password" class="form-control" placeholder="Password" type="password">
 									<input id="open-password-confirm" name="open-password-confirm" class="form-control" placeholder="Confirm password" type="password">
 									<div class="input-group-append">
-										<button class="btn btn-outline-secondary b-width" type="submit" id="open-regular-wallet">Open</button>
+										<button class="btn btn-outline-dark b-width" type="submit" id="open-regular-wallet">Open</button>
 									</div>
 								</div>
 							</form>
@@ -256,7 +257,7 @@
 								<div class="input-group">
 									<input id="passphrase" name="passphrase" class="form-control" placeholder="WIF private key" type="password">
 									<div class="input-group-append">
-										<button class="btn btn-outline-secondary b-width" type="submit" id="open-key-wallet">Open</button>
+										<button class="btn btn-outline-dark b-width" type="submit" id="open-key-wallet">Open</button>
 									</div>
 								</div>
 							</form>
@@ -331,7 +332,7 @@
 								<div class="input-group">
 									<input id="send-fee" class="form-control" placeholder="Fee" type="text" value="">
 									<div class="input-group-append">
-										<button class="btn btn-outline-secondary b-width" type="submit" id="send-tx">Send</button>
+										<button class="btn btn-outline-dark b-width" type="submit" id="send-tx">Send</button>
 									</div>
 								</div>
 							</div>
@@ -351,7 +352,7 @@
 											<div class="input-group">
 												<input class="form-control keys-privkey privkey" readonly data-original-title="" title="" type="password">
 												<span class="input-group-append">
-													<button class="btn btn-outline-secondary b-width toggle-priv-key" type="button">Show</button>
+													<button class="btn btn-outline-dark b-width toggle-priv-key" type="button">Show</button>
 												</span>
 											</div>
 										</div>
@@ -403,7 +404,7 @@
 									<div class="input-group">
 										<input class="form-control keys-privkey privkey" readonly data-original-title="" title="" type="password">
 										<span class="input-group-append">
-											<button class="btn btn-outline-secondary b-width toggle-priv-key" type="button">Show</button>
+											<button class="btn btn-outline-dark b-width toggle-priv-key" type="button">Show</button>
 										</span>
 									</div>
 								</div>
@@ -3016,7 +3017,8 @@
 
 				$("#open-key-form").submit(function(e){
 					var wif = $("#passphrase").val()
-					if (coinjs.wif2privkey(wif).privkey != "") {
+					var wifLength = wif.length
+					if (coinjs.wif2privkey(wif).privkey != "" && wifLength == 52) {
 						globalData.keys = coinjs.getKeys(wif)
 						$("#passphrase").val("")
 						openWallet(globalData.keys, false)
