--- a/index.html
+++ b/index.html
@@ -202,10 +202,13 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a href="#" class="nav-link mr-md-2">Home</a>
+							<a href="#" class="nav-link router-link mr-md-2" data-route="homepage">Home</a>
 						</li>
 						<li class="nav-item">
-							<a href="#/create" class="nav-link mr-md-2">Create</a>
+							<a href="#/create" class="nav-link router-link mr-md-2" data-route="create">Create</a>
+						</li>
+						<li class="nav-item">
+							<a href="#/broadcast" class="nav-link router-link mr-md-2" data-route="broadcast">Broadcast</a>
 						</li>
 						<li class="nav-item dropdown" id="network-list">
 							<a class="nav-item nav-link dropdown-toggle" href="#" id="network-versions" data-toggle="dropdown">NETWORK</a>
@@ -418,6 +421,23 @@
 			</div>
 		</div>
 
+		<!-- Generate address -->
+		<div id="broadcast" class="router-page">
+			<div class="container">
+				<div class="card mb-3">
+					<div class="card-header">
+						<b>Broadcast transaction</b>
+					</div>
+					<div class="card-body">
+						<textarea class="form-control" id="transaction-broadcast-raw" placeholder="Enter your signed raw transaction" rows="4"></textarea>
+					</div>
+					<div class="card-footer">
+						<button id="footer-broadcast" type="button" class="btn btn-primary btn-block footer-item">Broadcast</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div id="send-modal" class="modal" tabindex="-1" role="dialog">
 			<div class="modal-dialog modal-md" role="document">
 				<div class="modal-content">
@@ -436,7 +456,7 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button id="send-cancel" type="button" class="btn btn-block mr-auto btn-secondary" data-dismiss="modal">Cancel</button>
+						<button id="send-cancel" type="button" class="btn btn-block mr-auto btn-dark" data-dismiss="modal">Cancel</button>
 						<button id="send-confirm" type="button" class="btn btn-block mt-0 mr-auto btn-primary">Yes, send it!</button>
 					</div>
 				</div>
@@ -547,7 +567,8 @@
 				},
 				"tx": {
 					"loading-utxo": "Loading UTXOs...",
-					"generating": "Generating transaction..."
+					"generating": "Generating transaction...",
+					"success": "Transaction successfully broadcasted: ",
 				},
 				"title": {
 					"sure": "Are you sure?",
@@ -631,7 +652,9 @@
 				if (urlParams[0] == "#") {
 					var pageName = urlParams[1] != "" ? urlParams[1] : "homepage"
 					var templateName = "#" + pageName
-					
+						
+					$(".router-link").removeClass("active")
+					$(".router-link[data-route=" + pageName + "]").addClass("active")
 					if ($(".router-page:visible").attr("id") != urlParams[1]) {
 						$('div.router-page').hide()
 						if ($(templateName).length) {
@@ -647,6 +670,10 @@
 
 						case "create":
 							setTitle("Create wallet")
+							break
+
+						case "broadcast":
+							setTitle("Broadcast transaction")
 							break
 
 						// Swith network
@@ -778,7 +805,7 @@
 
 			// Show big error message at the top of the page :D 
 			function showMessage(message) {
-				$("#error-message").text(message)
+				$("#error-message").html(message)
 				$("#error-message").removeClass("d-none")
 				setTimeout(function() {
 					$("#error-message").addClass("d-none")
@@ -2906,19 +2933,20 @@
 
 						// then sign
 						var signed = txUnspent.sign(globalData.keys.wif)
+						console.log(signed)
 
-						txClone.broadcast(signed).then(function(data) {
-							if (!data.error) {
-								$("#status-screen span").html(`
-									<a href="` + blockExplorer.tx(data.data.txhash) + `" target="_blank">` + data.data.txhash + `</a> 
-								`)
-								$('#send-title').text(messages.title["success"])
-							} else {
-								$("#status-screen span").html(messages.error["broadcast-failed"])
-								$('#send-title').text(messages.title["failed"])
-							}
-							resetTxForm()
-						})
+						// txClone.broadcast(signed).then(function(data) {
+						// 	if (!data.error) {
+						// 		$("#status-screen span").html(`
+						// 			<a href="` + blockExplorer.tx(data.data.txhash) + `" target="_blank">` + data.data.txhash + `</a> 
+						// 		`)
+						// 		$('#send-title').text(messages.title["success"])
+						// 	} else {
+						// 		$("#status-screen span").html(messages.error["broadcast-failed"])
+						// 		$('#send-title').text(messages.title["failed"])
+						// 	}
+						// 	resetTxForm()
+						// })
 					} else {
 						showMessage(messages.error["not-enough-funds"])
 					}
@@ -2939,6 +2967,20 @@
 				$("#create-keys-address input").val(coin.address)
 				$("#create-keys-pubkey input").val(coin.pubkey)
 				$("#create-keys-privkey input").val(coin.wif)
+			})
+
+			$("#footer-broadcast").click(function(){
+				var rawtx = $("#transaction-broadcast-raw")
+				txBroadcast(rawtx.val()).then(function(data) {
+					if (!data.error) {
+						showMessage(`
+							${messages.tx["success"]}<a href="` + blockExplorer.tx(data.data.txhash) + `" target="_blank">` + data.data.txhash + `</a>
+						`)
+					} else {
+						showMessage(messages.error["broadcast-failed"])
+					}
+				})
+				rawtx.val("")
 			})
 
 			function resetTxForm() {
@@ -3018,7 +3060,7 @@
 				$("#open-key-form").submit(function(e){
 					var wif = $("#passphrase").val()
 					var wifLength = wif.length
-					if (coinjs.wif2privkey(wif).privkey != "" && wifLength == 52) {
+					if (wifLength == 52 && coinjs.wif2privkey(wif).privkey != "") {
 						globalData.keys = coinjs.getKeys(wif)
 						$("#passphrase").val("")
 						openWallet(globalData.keys, false)
