Debug for failed transactions and some minor changes

--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
 						<div class="card-header">
 							<ul class="nav nav-tabs card-header-tabs">
 								<li class="nav-item mr-2">
-									<a class="nav-link tab-link active" data-tab-name="wallet-wallet" data-tab-family="wallet-block" href="#">Wallet</a>
+									<a class="nav-link tab-link active" data-tab-name="wallet-balance" data-tab-family="wallet-block" href="#">Wallet</a>
 								</li>
 								<li class="nav-item mr-2">
 									<a class="nav-link tab-link" data-tab-name="wallet-send" data-tab-family="wallet-block" href="#">Send</a>
 								</li>
 								<li class="nav-item mr-2">
-									<a id="history-link" target="_blank" class="nav-link" href="#">History</a>
+									<a class="nav-link tab-link" data-tab-name="wallet-history" data-tab-family="wallet-block" href="#">History</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link tab-link" data-tab-name="wallet-keys" data-tab-family="wallet-block" href="#">Keys</a>
@@ -291,7 +291,7 @@
 						</div>
 						<div class="card-body">
 							<div class="text-center">
-								<div class="tab-item" data-tab="wallet-wallet">
+								<div class="tab-item" data-tab="wallet-balance">
 									<div id="qr-code-addres" class="qr-code"></div>
 									<div id="wallet-address"></div>
 									<h3 class="wallet-balance mb-0 pb-0 c-pointer">Loading...</h3>
@@ -332,6 +332,22 @@
 									<input id="send-fee" class="form-control" placeholder="Fee" type="text" value="">
 									<div class="input-group-append">
 										<button class="btn btn-outline-dark b-width" type="submit" id="send-tx">Send</button>
+									</div>
+								</div>
+							</div>
+
+							<div id="wallet-history" class="tab-item d-none" data-tab="wallet-history">
+								<div id="history-block">
+									<p>
+										<span>
+											List of recent transactions:
+										</span>
+										<a href="#" id="explorer-link" target="_blank" style="float: right;">Open in explorer</a>
+									</p>
+
+									<div class="tx-list"></div>
+									<div id="empty-history" class="alert alert-warning mb-0">
+										Transaction history is empty
 									</div>
 								</div>
 							</div>
@@ -449,6 +465,7 @@
 						</div>
 						<div id="status-screen" class="break-lines d-none">
 							<span></span>
+							<div class="extra-info"></div>
 						</div>
 					</div>
 					<div class="modal-footer">
@@ -475,6 +492,7 @@
 		<script>
 			// Config
 			var walletTimer = false
+			var walletVersion = "0.1.2"
 			var networksConfigs = {
 				"MBC": {
 					"name": "Main Network (MBC)",
@@ -523,7 +541,7 @@
 				"address": "",
 				"segwit": true,
 				"balance": 0,
-				"rfee": 0,
+				"rfee": getApi()["fee"],
 				"tx": {
 					"amount": 0,
 					"outputs": [],
@@ -551,7 +569,7 @@
 					"not-valid-address": "You must specify valid address!",
 					"not-valid-amount": "You must specify valid amount!",
 					"not-valid-fee": "You must specify valid fee!",
-					"bad-priv-key": "Bad private key!",
+					"bad-priv-key": "Bad WIF private key!",
 					"not-enough-utxo": "Not enough utxo :(",
 					"broadcast-failed": "Transaction broadcast failed :(",
 					"pass-not-match": "Your passwords do not match!",
@@ -711,8 +729,13 @@
 				return makeRequest({method: "blockchain.estimatesmartfee", params: ["30"]}, "POST")
 			}
 
+			// Address history
+			function addressHistory(address, index) {
+				return makeRequest({method: "blockchain.address.history", params: [address, index]}, "POST")
+			}
+
 			// Make request :D
-			function makeRequest(data, method = "GET", error_check = true) {
+			function makeRequest(data, method = "GET", error_check=true) {
 				return Promise.resolve($.ajax({
 					"method": method,
 					"url": getApi()["api"],
@@ -726,6 +749,8 @@
 						
 						if (!result["error"]) {
 							result["data"] = data.result
+						} else {
+							result["error"] = data.error
 						}
 					} else {
 						result = data
@@ -1079,8 +1104,8 @@
 					}
 				}
 
-				/* retreive the balance from a given address */
-				coinjs.addressBalance = function(address, callback){
+				// Retreive the balance from a given address
+				coinjs.addressBalance = function(address, callback) {
 					coinjs.ajax(
 						coinjs.host + "?method=blockchain.address.balance&params[]=" + address,
 						callback,
@@ -2752,7 +2777,9 @@
 
 		<!-- All magic is here :D -->
 		<script>
-			// Wallet functions
+			/* Wallet functions */
+
+			// Check wallet balance
 			function walletBalance() {
 				$(".wallet-balance").text("Loading...")
 				coinjs.addressBalance($("#wallet-address").html(), function(data) {
@@ -2767,6 +2794,47 @@
 				});
 			}
 
+			function walletTransactions() {
+				addressHistory($("#wallet-address").html(), 0).then(function(data) {
+					if (data.error == false) {
+						data.data.history.forEach(function(tx, index) {
+							if ($("#history-block .tx-list").find(`[data-address-history-txid="${tx.data.txid}"]`).length == 0) {
+								var content = `
+								<a href="${blockExplorer.tx(tx.data.txid)}" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start" data-address-history-txid="${tx.data.txid}">
+									<div class="row">
+										<div class="col-md-9 col-sm-12 col-xs-12">
+											<span class="text-muted mr-1 d-none">
+												<span class="entypo up text-danger"></span>
+											</span>
+											<span class="text-primary">${tx.data.txid}</span>
+											<div class="d-none">
+												Transaction details here
+											</div>
+										</div>
+										<div class="col-md-3 col-sm-12 col-xs-12 text-md-right">
+											<small class="text-muted">
+												#${tx.data.height}
+											</small>
+										</div>
+									</div>
+								</a>`
+
+								$("#history-block .tx-list").append(content)
+								$("#explorer-link").attr("href", blockExplorer.address($("#wallet-address").html()))
+
+								$("#empty-history").addClass("d-none")
+							}
+						})
+					}
+				});
+			}
+
+			function walletHistoryClear() {
+				$("#history-block .tx-list").empty()
+				$("#empty-history").removeClass("d-none")
+			}
+
+			// Set title
 			function setHomeTitle() {
 				if (globalData.keys.address) {
 					setTitle("Address " + globalData.keys.address)
@@ -2775,6 +2843,7 @@
 				}
 			}
 
+			// Check balance
 			function checkBalanceLoop() {
 				clearTimeout(walletTimer);
 				walletTimer = setTimeout(function() {
@@ -2782,9 +2851,11 @@
 						walletBalance();
 					}
 					checkBalanceLoop();
+					walletTransactions()
 				}, 45000);
 			}
 
+			// Open wallet by key
 			function openWallet(keys, segwit = true) {
 				globalData.address = keys.address
 				var wif = keys.wif
@@ -2812,7 +2883,10 @@
 				$("#send-fee").attr("placeholder", "Fee (recommended " + globalData.rfee + " " + getApi()["ticker"] +")")
 				showQrAddress("microbitcoin:" + globalData.address)
 
+				// Init wallet stuffs
+				walletHistoryClear()
 				walletBalance()
+				walletTransactions()
 				checkBalanceLoop()
 				setHomeTitle()
 			}
@@ -2852,7 +2926,8 @@
 				$("#send-confirm").addClass("disabled")
 				$("#confirm-screen").addClass("d-none")
 				$("#status-screen").removeClass("d-none")
-				$('#send-title').text(messages.title["processing"])
+				$("#send-title").text(messages.title["processing"])
+				$("#status-screen .extra-info").empty()
 
 				$("#status-screen span").html(messages.tx["generating"])
 				if (globalData.segwit) { script = coinjs.segwitAddress(globalData.keys.pubkey)["redeemscript"] }
@@ -2875,20 +2950,26 @@
 
 						// then sign
 						var signed = txUnspent.sign(globalData.keys.wif)
-						console.log(signed)
 
-						// txClone.broadcast(signed).then(function(data) {
-						// 	if (!data.error) {
-						// 		$("#status-screen span").html(`
-						// 			<a href="` + blockExplorer.tx(data.data.txhash) + `" target="_blank">` + data.data.txhash + `</a> 
-						// 		`)
-						// 		$('#send-title').text(messages.title["success"])
-						// 	} else {
-						// 		$("#status-screen span").html(messages.error["broadcast-failed"])
-						// 		$('#send-title').text(messages.title["failed"])
-						// 	}
-						// 	resetTxForm()
-						// })
+						txClone.broadcast(signed).then(function(data) {
+							if (!data.error) {
+								$("#status-screen span").html(`
+									<a href="` + blockExplorer.tx(data.data.txhash) + `" target="_blank">` + data.data.txhash + `</a> 
+								`)
+								$('#send-title').text(messages.title["success"])
+							} else {
+								$("#status-screen span").html(messages.error["broadcast-failed"])
+								$('#send-title').text(messages.title["failed"])
+								$("#status-screen .extra-info").html(`
+									<div class="mt-3">
+										<textarea class="form-control" readonly cols="30" rows="10">${data.error.message}</textarea>
+									</div>
+								`)
+							}
+							resetTxForm()
+						})
+
+						walletTransactions()
 					} else {
 						showMessage(messages.error["not-enough-funds"])
 					}
@@ -2904,6 +2985,7 @@
 				setHomeTitle()
 			}
 
+			// Create new wallet
 			$("#footer-create").click(function(){
 				var coin = coinjs.newKeys(null);
 				$("#create-keys-address input").val(coin.address)
@@ -2911,6 +2993,7 @@
 				$("#create-keys-privkey input").val(coin.wif)
 			})
 
+			// Broadcast raw transaction
 			$("#footer-broadcast").click(function(){
 				var rawtx = $("#transaction-broadcast-raw")
 				txBroadcast(rawtx.val()).then(function(data) {
@@ -2925,6 +3008,7 @@
 				rawtx.val("")
 			})
 
+			// Reset sending form
 			function resetTxForm() {
 				$(".send-additional-output").remove()
 				$("#wallet-send input").val("")
@@ -2999,10 +3083,11 @@
 					}
 				})
 
+				// Open wallet by WIF key
 				$("#open-key-form").submit(function(e){
 					var wif = $("#passphrase").val().trim()
 					var wifLength = wif.length
-					if (wifLength == 52 && coinjs.wif2privkey(wif).privkey != "") {
+					if ([51, 52].includes(wifLength) && coinjs.wif2privkey(wif).privkey != "") {
 						globalData.keys = coinjs.getKeys(wif)
 						$("#passphrase").val("")
 						openWallet(globalData.keys, false)
@@ -3013,6 +3098,7 @@
 					e.preventDefault()
 				})
 
+				// Open wallet using email and password
 				$("#open-regular-form").submit(function(e){
 					var email = $("#open-email").val().toLowerCase()
 					var pass = $("#open-password").val()
@@ -3053,16 +3139,19 @@
 					e.preventDefault()
 				})
 
+				// Check wallet balance on balance label click
 				$(".wallet-balance").click(function(e){
 					walletBalance()
 					e.preventDefault()
 				})
 
+				// Confirm transaction sendign (are you sure?)
 				$("#send-confirm").click(function(e){
 					sendTx()
 					e.preventDefault()
 				})
 
+				// Toggle private key visibility
 				$(".toggle-priv-key").click(function(){
 					if ($(this).text() == "Show") {
 						$(this).parent().parent().find(".keys-privkey").attr("type", "text")
@@ -3073,6 +3162,7 @@
 					}
 				})
 
+				// Add transaction output
 				$("#add-output").click(function(e){
 					$("#send-outputs").append(`
 						<div class="send-additional-output send-outputs-item input-group mb-2">
@@ -3092,22 +3182,26 @@
 					e.preventDefault()
 				})
 
+				// Reset send form
 				$("#send-reset").click(function(e) {
 					resetTxForm()
 					e.preventDefault()
 				})
 
+				// Footer button which close wallet
 				$("#footer-close").click(function(e) {
 					closeWallet()
 					e.preventDefault()
 				})
 
+				// Change address type (legacy/segwit)
 				$(".address-type-switch").click(function(e) {
 					openWallet(globalData.keys, $(this).data("address-type") == "segwit")
 					e.preventDefault()
 				})
 
-				estimateFee().then(function(data){
+				// Set wallet recomended fee
+				estimateFee().then(function(data) {
 					if (data.error == false) {
 						globalData.rfee = amountFormat(data.data.feerate)
 					} else {
@@ -3115,7 +3209,7 @@
 					}
 				})
 
-				/* capture mouse movement to add entropy */
+				// Capture mouse movement to add entropy
 				var IE = document.all?true:false // Boolean, is browser IE?
 				if (!IE) document.captureEvents(Event.MOUSEMOVE)
 				document.onmousemove = getMouseXY;
