--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 									<a class="nav-link tab-link" data-tab-name="wallet-send" data-tab-family="wallet-block" href="#">Send</a>
 								</li>
 								<li class="nav-item mr-2">
-									<a class="nav-link tab-link" data-tab-name="wallet-history" data-tab-family="wallet-block" href="#">History</a>
+									<a id="history-link" class="nav-link" target="_blank" href="https://microbitcoinorg.github.io/explorer/#/address/">History</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link tab-link" data-tab-name="wallet-keys" data-tab-family="wallet-block" href="#">Keys</a>
@@ -332,22 +332,6 @@
 									<input id="send-fee" class="form-control" placeholder="Fee" type="text" value="">
 									<div class="input-group-append">
 										<button class="btn btn-outline-dark b-width" type="submit" id="send-tx">Send</button>
-									</div>
-								</div>
-							</div>
-
-							<div id="wallet-history" class="tab-item d-none" data-tab="wallet-history">
-								<div id="history-block">
-									<p>
-										<span>
-											List of recent transactions:
-										</span>
-										<a href="#" id="explorer-link" target="_blank" style="float: right;">Open in explorer</a>
-									</p>
-
-									<div class="tx-list"></div>
-									<div id="empty-history" class="alert alert-warning mb-0">
-										Transaction history is empty
 									</div>
 								</div>
 							</div>
@@ -496,7 +480,7 @@
 			var networksConfigs = {
 				"MBC": {
 					"name": "Main Network (MBC)",
-					"api": "https://api.mbc.wiki/",
+					"api": "https://api.mbc.wiki",
 					"ticker": "MBC",
 					"decimals": 4,
 					"fee": 0.01,
@@ -505,13 +489,12 @@
 						"decimals": 4,
 						"pub": 0x1A,
 						"multisig": 0x33,
-						"priv": 0x80,
-						"forkid": 0x60
+						"priv": 0x80
 					}
 				},
 				"TMBC": {
 					"name": "Test Network (TMBC)",
-					"api": "https://api.mbc.wiki/test/",
+					"api": "https://api.mbc.wiki/test",
 					"ticker": "TMBC",
 					"decimals": 4,
 					"fee": 0.01,
@@ -520,8 +503,7 @@
 						"decimals": 4,
 						"pub": 0x47,
 						"multisig": 0x49,
-						"priv": 0x80,
-						"forkid": 0x60
+						"priv": 0x80
 					}
 				}
 			}
@@ -532,7 +514,7 @@
 					return "https://microbitcoinorg.github.io/explorer/#/address/" + address + "/" + getApi()["ticker"] 
 				},
 				"tx": function(tx) {
-					return "https://microbitcoinorg.github.io/explorer/#/tx/" + tx + "/" + getApi()["ticker"] 
+					return "https://microbitcoinorg.github.io/explorer/#/transaction/" + tx + "/" + getApi()["ticker"] 
 				}
 			}
 
@@ -720,43 +702,22 @@
 			}
 
 			// Broadcast tx
-			function txBroadcast(rawtx) {
-				return makeRequest({method: "blockchain.transaction.send", params: [rawtx]}, "POST")
+			function transactionBroadcast(rawtx) {
+				return Promise.resolve($.ajax({
+					"method": "POST",
+					"url": getApi()["api"] + "/broadcast",
+					"data": {
+						"raw": rawtx
+					}
+				}))
 			}
 
 			// Estimate fee
 			function estimateFee() {
-				return makeRequest({method: "blockchain.estimatesmartfee", params: ["30"]}, "POST")
-			}
-
-			// Address history
-			function addressHistory(address, index) {
-				return makeRequest({method: "blockchain.address.history", params: [address, index]}, "POST")
-			}
-
-			// Make request :D
-			function makeRequest(data, method = "GET", error_check=true) {
 				return Promise.resolve($.ajax({
-					"method": method,
-					"url": getApi()["api"],
-					"data": data
+					url: getApi()["api"] + "/fee",
 				})).then(function(data) {
-					if (error_check) {
-						result = {
-							"error": "error" in data,
-							"data": []
-						}
-						
-						if (!result["error"]) {
-							result["data"] = data.result
-						} else {
-							result["error"] = data.error
-						}
-					} else {
-						result = data
-					}
-
-					return result
+					return data
 				})
 			}
 
@@ -801,7 +762,6 @@
 				coinjs.pub = config.params.pub
 				coinjs.multisig = config.params.multisig
 				coinjs.priv = config.params.priv
-				coinjs.forkid = config.params.forkid
 				coinjs.host = config.api
 
 				coinjs.hdkey = {'prv': 0x0488ade4, 'pub': 0x0488b21e}
@@ -1107,7 +1067,7 @@
 				// Retreive the balance from a given address
 				coinjs.addressBalance = function(address, callback) {
 					coinjs.ajax(
-						coinjs.host + "?method=blockchain.address.balance&params[]=" + address,
+						coinjs.host + "/balance/" + address,
 						callback,
 						"GET"
 					);
@@ -1818,7 +1778,7 @@
 					/* list unspent transactions */
 					r.listUnspent = function(address, amount, callback) {
 						coinjs.ajax(
-							coinjs.host + "?method=blockchain.address.utxo&params[]=" + address + "&params[]=" + amount,
+							coinjs.host + "/unspent/" + address + "?amount[]=" + amount,
 							callback,
 							"GET"
 						);
@@ -1839,11 +1799,11 @@
 							for (i = 0; i < unspent.length; i++) {
 								var utxo = unspent[i];
 
-								var txhash = utxo.tx_hash;
-								var n = utxo.tx_pos;
+								var txhash = utxo.txid;
+								var n = utxo.index;
 								var scr = script || utxo.script;
 
-								if(segwit) {
+								if (segwit) {
 									/* this is a small hack to include the value with the redeemscript to make the signing procedure smoother. 
 									It is not standard and removed during the signing procedure. */
 
@@ -1875,12 +1835,6 @@
 							self.sign(wif);
 							return callback(data);
 						});
-					}
-
-					/* broadcast a transaction */
-					r.broadcast = function(txhex){
-						var tx = txhex || this.serialize()
-						return txBroadcast(tx)
 					}
 
 					/* generate the transaction hash to sign from a transaction input */
@@ -2044,7 +1998,6 @@
 
 						var locktime = coinjs.numToBytes(this.lock_time, 4);
 
-						sigHashType |= coinjs.forkid;
 						var sighash = coinjs.numToBytes(sigHashType, 4);
 
 						var buffer = []; 
@@ -2127,7 +2080,6 @@
 						}
 
 						var shType = sigHashType || 1;
-						shType |= coinjs.forkid;
 
 						var hash = txhash || Crypto.util.hexToBytes(this.transactionHash(index, shType));
 
@@ -2785,53 +2737,13 @@
 				coinjs.addressBalance($("#wallet-address").html(), function(data) {
 					data = JSON.parse(data)
 					if(data.error == undefined) {
-						globalData.balance = data.result.confirmed
+						globalData.balance = data.result.balance
 						$(".wallet-balance").text(amountFormat(globalData.balance) + " " + getApi()["ticker"])
 					} else {
 						showMessage("We couldn't load wallet balance")
 						$(".wallet-balance").text("0.00 " + getApi()["ticker"])
 					}
 				});
-			}
-
-			function walletTransactions() {
-				addressHistory($("#wallet-address").html(), 0).then(function(data) {
-					if (data.error == false) {
-						data.data.history.forEach(function(tx, index) {
-							if ($("#history-block .tx-list").find(`[data-address-history-txid="${tx.data.txid}"]`).length == 0) {
-								var content = `
-								<a href="${blockExplorer.tx(tx.data.txid)}" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start" data-address-history-txid="${tx.data.txid}">
-									<div class="row">
-										<div class="col-md-9 col-sm-12 col-xs-12">
-											<span class="text-muted mr-1 d-none">
-												<span class="entypo up text-danger"></span>
-											</span>
-											<span class="text-primary">${tx.data.txid}</span>
-											<div class="d-none">
-												Transaction details here
-											</div>
-										</div>
-										<div class="col-md-3 col-sm-12 col-xs-12 text-md-right">
-											<small class="text-muted">
-												#${tx.data.height}
-											</small>
-										</div>
-									</div>
-								</a>`
-
-								$("#history-block .tx-list").append(content)
-								$("#explorer-link").attr("href", blockExplorer.address($("#wallet-address").html()))
-
-								$("#empty-history").addClass("d-none")
-							}
-						})
-					}
-				});
-			}
-
-			function walletHistoryClear() {
-				$("#history-block .tx-list").empty()
-				$("#empty-history").removeClass("d-none")
 			}
 
 			// Set title
@@ -2851,7 +2763,6 @@
 						walletBalance();
 					}
 					checkBalanceLoop();
-					walletTransactions()
 				}, 45000);
 			}
 
@@ -2884,9 +2795,7 @@
 				showQrAddress("microbitcoin:" + globalData.address)
 
 				// Init wallet stuffs
-				walletHistoryClear()
 				walletBalance()
-				walletTransactions()
 				checkBalanceLoop()
 				setHomeTitle()
 			}
@@ -2951,10 +2860,10 @@
 						// then sign
 						var signed = txUnspent.sign(globalData.keys.wif)
 
-						txClone.broadcast(signed).then(function(data) {
-							if (!data.error) {
+						transactionBroadcast(signed).then(function(data) {
+							if (data.error == undefined) {
 								$("#status-screen span").html(`
-									<a href="` + blockExplorer.tx(data.data.txhash) + `" target="_blank">` + data.data.txhash + `</a> 
+									<a href="` + blockExplorer.tx(data.result) + `" target="_blank">` + data.result + `</a> 
 								`)
 								$('#send-title').text(messages.title["success"])
 							} else {
@@ -2962,14 +2871,12 @@
 								$('#send-title').text(messages.title["failed"])
 								$("#status-screen .extra-info").html(`
 									<div class="mt-3">
-										<textarea class="form-control" readonly cols="30" rows="10">${data.error.message}</textarea>
+										<textarea class="form-control" readonly cols="30" rows="10">${data.error}</textarea>
 									</div>
 								`)
 							}
 							resetTxForm()
 						})
-
-						walletTransactions()
 					} else {
 						showMessage(messages.error["not-enough-funds"])
 					}
@@ -2996,10 +2903,10 @@
 			// Broadcast raw transaction
 			$("#footer-broadcast").click(function(){
 				var rawtx = $("#transaction-broadcast-raw")
-				txBroadcast(rawtx.val()).then(function(data) {
-					if (!data.error) {
+				transactionBroadcast(rawtx.val()).then(function(data) {
+					if (data.error == undefined) {
 						showMessage(`
-							${messages.tx["success"]}<a href="` + blockExplorer.tx(data.data.txhash) + `" target="_blank">` + data.data.txhash + `</a>
+							${messages.tx["success"]}<a href="` + blockExplorer.tx(data.result) + `" target="_blank">` + data.result + `</a>
 						`)
 					} else {
 						showMessage(messages.error["broadcast-failed"])
@@ -3202,8 +3109,8 @@
 
 				// Set wallet recomended fee
 				estimateFee().then(function(data) {
-					if (data.error == false) {
-						globalData.rfee = amountFormat(data.data.feerate)
+					if (data.error == undefined) {
+						globalData.rfee = amountFormat(data.result.feerate)
 					} else {
 						globalData.rfee = getApi()["fee"]
 					}
