--- a/index.html
+++ b/index.html
@@ -2871,7 +2871,7 @@
 								$('#send-title').text(messages.title["failed"])
 								$("#status-screen .extra-info").html(`
 									<div class="mt-3">
-										<textarea class="form-control" readonly cols="30" rows="10">${data.error}</textarea>
+										<textarea class="form-control" readonly cols="30" rows="10">${data.error.message}</textarea>
 									</div>
 								`)
 							}
